<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfile"
        android:layout_width="@dimen/profilePicture"
        android:layout_height="@dimen/profilePicture"
        android:src="@drawable/ic_incognito"
        app:civ_fill_color="@color/gray_night"
        android:layout_above="@+id/center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center"
        android:textSize="20sp"
        android:padding="@dimen/margin"
        android:visibility="gone"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center"
        android:textSize="20sp"
        android:padding="@dimen/margin"
        android:gravity="center"/>

    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:text="@string/allow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/content_success"
        android:tint="@color/green_grass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/content_fail"
        android:tint="@color/red_velvet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="gone" />

</RelativeLayout>