<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.DetailActivity"
    tools:showIn="@layout/activity_detail" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/bottom_navigation_height"
                style="?android:attr/progressBarStyleLarge" />

            <include layout="@layout/empty_layout" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:fitsSystemWindows="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </ViewFlipper>

        <io.codetail.widget.RevealFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/revealSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_white"
                android:visibility="invisible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/centerView"
                    android:gravity="center"
                    android:textColor="@color/gray_night"
                    android:text="@string/sign_in"
                    android:layout_marginRight="@dimen/moreMargin"
                    android:layout_marginLeft="@dimen/moreMargin"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/centerView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin"
                    android:layout_centerInParent="true" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/centerView"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/showMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/showMe"
                        android:layout_marginEnd="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        style="?borderlessButtonStyle" />

                    <Button
                        android:id="@+id/skip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skip"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:textColor="@color/red_velvet"
                        style="?borderlessButtonStyle" />

                </LinearLayout>
            </RelativeLayout>
        </io.codetail.widget.RevealFrameLayout>
    </FrameLayout>
</android.support.v4.widget.SwipeRefreshLayout>